fixed wrapper issue with content disappearing behind sticky bot nav bar.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,22 @@
-body {
+/* Wrapper to prevent bottom nav bar from hiding content*/
+html, body {
+    height: 100%;
+    margin: 0;
     background-color: #296A72;
 }
+
+.wrapper {
+    min-height: 100%;
+  
+    /* Equal to height of footer */
+    /* But also accounting for potential margin-bottom of last child */
+    margin-bottom: -50px;
+}
+  .footer,
+  .push {
+    height: 100px;
+}
+
 
 /* Adds a bottom margin to the intro container on index.html */
 #intro {
